fix info bite spacing

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -121,6 +121,9 @@ body {
 .info-bite {
   display: flex;
   justify-content: space-between;
+  p:first-child {
+    margin-right: 12px;
+  }
 }
 
 .post-tagline {
